<resources>
    <string name="app_name">SpaceX</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="all">All</string>
    <string name="apply">Apply</string>
    <string name="date_at_time">%1$s at %2$s</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">hh:mm a</string>
    <string name="to_launch">Days \nfrom now:</string>
    <string name="since_launch">Days \nsince now:</string>
    <string name="mission_label">Mission:</string>
    <string name="date_label">Date/time:</string>
    <string name="rocket_label">Rocket:</string>
    <string name="article">Article</string>
    <string name="video">Video</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="company">Company</string>
    <string name="launches">Launches</string>
    <string name="company_info"> %1$s was founded by %2$s in %3$s. It has now %4$s employees, %5$s launch sites, and is valued at USD %6$s</string>
    <string name="status">Status</string>
    <string name="oldest_first">Oldest first</string>
    <string name="newest_first">Newest first</string>
    <string name="launch_date">Launch date</string>
    <string name="launch_year">Launch year</string>
</resources>
