<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/title_status"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_status">

        <RadioButton
            android:id="@+id/all_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/success_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/success" />

        <RadioButton
            android:id="@+id/failure_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/failure" />

    </RadioGroup>

    <TextView
        android:id="@+id/date_sort_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/launch_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <RadioGroup
        android:id="@+id/dateSortRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/date_year_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_sort_title">

        <RadioButton
            android:id="@+id/ascending_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/oldest_first" />

        <RadioButton
            android:id="@+id/descenging_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/newest_first" />


    </RadioGroup>

    <TextView
        android:id="@+id/date_year_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/launch_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateSortRadioGroup" />

    <CheckBox
        android:id="@+id/year_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toBottomOf="@id/date_year_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_year_title"
        app:layout_constraintTop_toTopOf="@id/date_year_title" />

    <NumberPicker
        android:id="@+id/year_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_year_title" />


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
