<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">


    <TextView
        android:id="@+id/article_row"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/article"
        app:drawableStartCompat="@drawable/ic_article"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/video_row"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/video"
        app:drawableStartCompat="@drawable/ic_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_row" />

    <TextView
        android:id="@+id/wiki_row"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/wikipedia"
        app:drawableStartCompat="@drawable/ic_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_row" />

</androidx.constraintlayout.widget.ConstraintLayout>
